Dockerize the app with changing db from H2 to MySQL